# General-2-to-3-D

./: ExecutionPlan.md  MainPlan3.md  Notes.txt  README.md  ResearchNotes.md  UIExecutionPlan.md
2 2 3 D test 1/: .env.example  .gitignore  README.md
2 2 3 D test 1/backend/: pyproject.toml
2 2 3 D test 1/backend/src/plan_to_3d/: config.py  main.py  models.py  openai_pipeline.py  playbooks-guide.md  playbooks.py  services.py  storage.py
2 2 3 D test 1/backend/src/plan_to_3d_backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
Archive/: HUGEPROMPT2.md  MainPlan2.md
Presentations/: MainPlan3.html  MainPlan3WorkflowAtlas.html
Resources/: AI Drawing Interpretation Pipeline Architecture.md  AI Structural Model Review Pipeline.md  AI for Australian Steel Schedule Extraction.md  Agentic Synthesis Protocol Design.md  Deterministic Evidence Bundle for Drawings.md  GPT-5.5 Structural Pack Interpretation JSON.md  Geometry Solver Research for Structural Drawings.md  Human Review Protocol for AI Extraction.md  LLM Pipeline Run Management Design.md  PDF Vector and OCR Extraction Pipeline.md  Pipeline Object Identity and Naming.md  Researchtopics.md  Scene Graph Contract for Browser Review.md  Sheet Classification and Extraction Pipeline.md  Structural Drawing Reference Framework Research.md  Structural Elevation Resolution Research.md  Structural Graph Builder Research.md  Structural Plan Interpretation Research.md  Uncertainty and Conflict Pipeline Model.md
Schemas/: README.md  registry.json
Stages/: Orchestrator.md  Stage - 0.md  (+11 more)
(+50 files in other folders)
